# jupyter_nixenvs

./: .gitignore  debuging.txt  kernels.nix
sci-kernel/: overrides.nix  overrides.nix.old  pyproject.toml
